gcc/testsuite/g++.dg/template/void6.C
//PR c++/28594

template<void, int> struct A; // { dg-error "not a valid type" }
